- Introduced `VisitMergingServiceTest` to validate visit merging functionality. - Optimized visit merging in `VisitMergingService` by removing unnecessary time checks and parameters. - Refactored stay point detection in `StayPointDetectionService` for simplicity and improved clustering. - Added helper methods `weightedCenter` and reduced redundant logic in `StayPointDetectionService`. - Enhanced testing utilities in `AbstractIntegrationTest` for visit-related imports. - Extended `ProcessedVisitRepository` with `findByUserOrderByStartTime` for better sorting.